--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="confirm_your_password">Confirm Your Password</string>
     <string name="register">Register</string>
     <string name="already_a_user_login_here">Already a User? Login Here</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
