--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="already_a_user_login_here">Already a User? Login Here</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="inspect">inspect</string>
+    <string name="max_price_9999">Max price $ 9999</string>
 </resources>
